--- a/res/layout/photos_select_frag.xml
+++ b/res/layout/photos_select_frag.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:background="?android:attr/selectableItemBackground"
-            android:textSize="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/ed__textsize_medium"
             android:textColor="@android:color/white"
             android:text="@android:string/cancel" />
 
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:background="?android:attr/selectableItemBackground"
-            android:textSize="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/ed__textsize_medium"
             android:textColor="@android:color/white"
             android:text="@android:string/ok" />
     </LinearLayout>
