--- a/res/menu/photos_frag.xml
+++ b/res/menu/photos_frag.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_action_new"
         android:showAsAction="ifRoom"
         android:title="@string/new_">
         <menu>
