--- a/res/menu/contacts_frag.xml
+++ b/res/menu/contacts_frag.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:icon="@android:drawable/ic_menu_add"
+        android:id="@+id/menu_new"
+        android:icon="@drawable/ic_action_new"
         android:showAsAction="ifRoom"
         android:visible="false"
         android:title="@string/new_">
