--- a/res/layout/journal_frag.xml
+++ b/res/layout/journal_frag.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <EditText
-        android:id="@+id/txt_note"
+    <com.nexuspad.journal.ui.view.LinedEditText
+        android:id="@+id/lbl_note"
         style="@style/listItemTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
         android:hint="@string/journal"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:inputType="none"
+        android:editable="false"
+        android:background="@null"
+        />
 
-</LinearLayout>
+</FrameLayout>
